Bug: lines don't wrap

--- a/private/styles/main.scss
+++ b/private/styles/main.scss
@@ -746,7 +746,6 @@ $msgList-msgLine-side-padding: .2em;
 .list {
   li {
     padding: $padding;
-    white-space: pre;
   }
 
   header {
